# THD-assistant

./: .env.example  .gitignore  Home.py  README.md  pyproject.toml  pytest.ini  requirements_gemini.txt  requirements_streamlit.txt  test_html.py  test_js.py
config/: content_index.yaml  program_features.yaml  query_patterns.yaml
data/programs/: ba_business_administration.yaml  ba_business_administration_and_management.yaml  ba_business_administration_and_service_management.yaml  ba_cosmetic_science_and_management.yaml  ba_international_management.yaml  ba_international_tourism_management_health_and_medical_tourism.yaml  ba_management_of_inclusion_and_participation.yaml  ba_nursing_pedagogy.yaml  ba_pedagogy_in_rescue_services.yaml  ba_security_management.yaml  ba_social_work.yaml  ba_tourism_management.yaml  beng_applied_computer_science.yaml  beng_building_products_and_processes.yaml  beng_circular_engineering.yaml  beng_civil_and_construction_engineering.yaml  beng_electrical_engineering_and_information_technology.yaml  beng_electronics_for_artificial_intelligence.yaml  (+75 more)
docs/: FEATURES.md  PROJECT_EXPLANATION.md  PROJECT_STRUCTURE.md  README_STREAMLIT.md
pages/: 1_🔍_Program_Search.py  2_📋_Program_Details.py  3_🤖_Assistant.py  4_⚙️_Settings.py
src/: __init__.py  config.py  conversation_manager.py  data_store.py  live_chat_worker.py  llm_engine_gemini.py  local_voice_handler.py  models.py  response_cache.py  session_manager.py  stt_engine_speechrecognition.py  tts_engine_edge.py  voice_runtime_config.py
tests/: README.md  conftest.py  manual_voice_checklist.md
(+7 files in other folders)
